styles/main.css
@import url('https://fonts.googleapis.com/css?family=Lato');

html {
	margin: 0;
	height: 100%;
	font-family: 'Lato', sans-serif;
}

body {
	background-color: rgb(85, 136, 219);
	background: linear-gradient(to right, rgb(85, 136, 219), rgb(32, 170, 249));
	text-align: center;
}

h1 {
	font-weight: 900;
	letter-spacing: 1px;
    font-size: 3em;
}

.heading {
	display: inline-block;
	text-align: center;
	vertical-align: middle;
	background-color: rgba(240, 240, 240, 0.8);
	padding: 0px 20px 20px 20px;
	border-radius: 3px 3px 0px 0px;
	max-width: 590px;
	min-width: 520px;
}

.list-horizontal{
    padding-left: 0px;
}

.list-horizontal li {
	display: inline-block;
}

.list-horizontal li:before {
	content: '\00a0\2022\00a0\00a0';
	color: #FFF;
	color: rgb(0, 0, 0);
	font-size: 11px;
}

.list-horizontal li:first-child:before {
	content: '';
}

@media only screen and (max-width: 600px) {
	.heading {
		width: 100%;
		padding: 0;
		border-radius: 0px;
	}

	body {
		margin: 0;
	}
}

